# flipkartproductchatbot

./: Dockerfile  README.md  pyproject.toml
flipkart/: config.py  data_converter.py
prometheus/: prometheus-configmap.yaml
